; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-crypt.c_pdf_compute_encryption_key.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-crypt.c_pdf_compute_encryption_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8*, i32, i32, i32, i64 }

@padding = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.TYPE_3__*, i8*, i64, i8*)* @pdf_compute_encryption_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pdf_compute_encryption_key(i32* %0, %struct.TYPE_3__* %1, i8* %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca [32 x i8], align 16
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i8* %4, i8** %10, align 8
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = sdiv i32 %18, 8
  %20 = call i32 @fz_clampi(i32 %19, i32 0, i32 16)
  store i32 %20, i32* %14, align 4
  %21 = load i64, i64* %9, align 8
  %22 = icmp ugt i64 %21, 32
  br i1 %22, label %23, label %24

23:                                               ; preds = %5
  store i64 32, i64* %9, align 8
  br label %24

24:                                               ; preds = %23, %5
  %25 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %26 = load i8*, i8** %8, align 8
  %27 = load i64, i64* %9, align 8
  %28 = trunc i64 %27 to i32
  %29 = call i32 @memcpy(i8* %25, i8* %26, i32 %28)
  %30 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %31 = load i64, i64* %9, align 8
  %32 = getelementptr inbounds i8, i8* %30, i64 %31
  %33 = load i8*, i8** @padding, align 8
  %34 = load i64, i64* %9, align 8
  %35 = sub i64 32, %34
  %36 = trunc i64 %35 to i32
  %37 = call i32 @memcpy(i8* %32, i8* %33, i32 %36)
  %38 = call i32 @fz_md5_init(i32* %15)
  %39 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %40 = call i32 @fz_md5_update(i32* %15, i8* %39, i32 32)
  %41 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %42 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %41, i32 0, i32 1
  %43 = load i8*, i8** %42, align 8
  %44 = call i32 @fz_md5_update(i32* %15, i8* %43, i32 32)
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 5
  %47 = load i64, i64* %46, align 8
  %48 = trunc i64 %47 to i32
  store i32 %48, i32* %12, align 4
  %49 = load i32, i32* %12, align 4
  %50 = and i32 %49, 255
  %51 = trunc i32 %50 to i8
  %52 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  store i8 %51, i8* %52, align 16
  %53 = load i32, i32* %12, align 4
  %54 = lshr i32 %53, 8
  %55 = and i32 %54, 255
  %56 = trunc i32 %55 to i8
  %57 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 1
  store i8 %56, i8* %57, align 1
  %58 = load i32, i32* %12, align 4
  %59 = lshr i32 %58, 16
  %60 = and i32 %59, 255
  %61 = trunc i32 %60 to i8
  %62 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 2
  store i8 %61, i8* %62, align 2
  %63 = load i32, i32* %12, align 4
  %64 = lshr i32 %63, 24
  %65 = and i32 %64, 255
  %66 = trunc i32 %65 to i8
  %67 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 3
  store i8 %66, i8* %67, align 1
  %68 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %69 = call i32 @fz_md5_update(i32* %15, i8* %68, i32 4)
  %70 = load i32*, i32** %6, align 8
  %71 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %72 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %71, i32 0, i32 4
  %73 = load i32, i32* %72, align 8
  %74 = call i64 @pdf_to_str_buf(i32* %70, i32 %73)
  %75 = inttoptr i64 %74 to i8*
  %76 = load i32*, i32** %6, align 8
  %77 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %78 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %77, i32 0, i32 4
  %79 = load i32, i32* %78, align 8
  %80 = call i32 @pdf_to_str_len(i32* %76, i32 %79)
  %81 = call i32 @fz_md5_update(i32* %15, i8* %75, i32 %80)
  %82 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %83 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %82, i32 0, i32 2
  %84 = load i32, i32* %83, align 8
  %85 = icmp sge i32 %84, 4
  br i1 %85, label %86, label %99

86:                                               ; preds = %24
  %87 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %88 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %87, i32 0, i32 3
  %89 = load i32, i32* %88, align 4
  %90 = icmp ne i32 %89, 0
  br i1 %90, label %98, label %91

91:                                               ; preds = %86
  %92 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  store i8 -1, i8* %92, align 16
  %93 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 1
  store i8 -1, i8* %93, align 1
  %94 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 2
  store i8 -1, i8* %94, align 2
  %95 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 3
  store i8 -1, i8* %95, align 1
  %96 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %97 = call i32 @fz_md5_update(i32* %15, i8* %96, i32 4)
  br label %98

98:                                               ; preds = %91, %86
  br label %99

99:                                               ; preds = %98, %24
  %100 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %101 = call i32 @fz_md5_final(i32* %15, i8* %100)
  %102 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %103 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %102, i32 0, i32 2
  %104 = load i32, i32* %103, align 8
  %105 = icmp sge i32 %104, 3
  br i1 %105, label %106, label %121

106:                                              ; preds = %99
  store i32 0, i32* %13, align 4
  br label %107

107:                                              ; preds = %117, %106
  %108 = load i32, i32* %13, align 4
  %109 = icmp slt i32 %108, 50
  br i1 %109, label %110, label %120

110:                                              ; preds = %107
  %111 = call i32 @fz_md5_init(i32* %15)
  %112 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %113 = load i32, i32* %14, align 4
  %114 = call i32 @fz_md5_update(i32* %15, i8* %112, i32 %113)
  %115 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %116 = call i32 @fz_md5_final(i32* %15, i8* %115)
  br label %117

117:                                              ; preds = %110
  %118 = load i32, i32* %13, align 4
  %119 = add nsw i32 %118, 1
  store i32 %119, i32* %13, align 4
  br label %107

120:                                              ; preds = %107
  br label %121

121:                                              ; preds = %120, %99
  %122 = load i8*, i8** %10, align 8
  %123 = getelementptr inbounds [32 x i8], [32 x i8]* %11, i64 0, i64 0
  %124 = load i32, i32* %14, align 4
  %125 = call i32 @memcpy(i8* %122, i8* %123, i32 %124)
  ret void
}

declare dso_local i32 @fz_clampi(i32, i32, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @fz_md5_init(i32*) #1

declare dso_local i32 @fz_md5_update(i32*, i8*, i32) #1

declare dso_local i64 @pdf_to_str_buf(i32*, i32) #1

declare dso_local i32 @pdf_to_str_len(i32*, i32) #1

declare dso_local i32 @fz_md5_final(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
